--- a/rules/rvt-mutations.toml
+++ b/rules/rvt-mutations.toml
@@ -65,11 +65,11 @@ rewrite='(:[x], :[y], :[z])'
 
 # complex block nesting
 [7248731ad60a]
-match=':[1]{:[2]} :[3]'
+match='{:[1] {:[2]} :[3]}'
 rewrite=':[1] {:[1] {:[2]} }:[3]'
 
 [ec96d42ab828]
-match=':[1]{:[2]} :[3]'
+match='{:[1] {:[2]} :[3]}'
 rewrite=':[1] {:[1] {:[2]} :[2]}:[3]'
 
 [8f1128ea8eef]
@@ -82,7 +82,7 @@ rewrite='{:[1] {:[1] {:[2]} :[2] }:[3]}'
 
 [ef509e3f7ba5]
 match='{:[1]{:[2]}:[3]}'
-rewrite='{:[3] }'
+rewrite='{:[3]}'
 
 [d8adf820a665]
 match='{:[1]{:[2]}:[3]}'
